phy_port: more support, add linkmode reporting
Signed-off-by: Maxime Chevallier <maxime.chevallier@bootlin.com>

--- a/Documentation/netlink/specs/ethtool.yaml
+++ b/Documentation/netlink/specs/ethtool.yaml
@@ -1008,6 +1008,12 @@ attribute-sets:
       -
         name: upstream-index
         type: u32
+      -
+        name: supported
+        type: bitset
+      -
+        name: lanes
+        type: u8
 
 operations:
   enum-model: directional
@@ -1798,4 +1804,6 @@ operations:
             - upstream-type
             - upstream-name
             - upstream-index
+            - supported
+            - lanes
       dump: *phy-port-get-op
